<resources>
    <string name="app_name">WaterCake</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="have_some_cake">Have some cake:</string>
    <string name="registration">Registration</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="accept">Accept</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="title">Title</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="submit">Submit</string>
    <string name="create_water_report">Create Water Report</string>
    <string name="view_water_reports">View Water Reports</string>
    <string name="water_condition">Water Condition</string>
    <string name="water_type">Water Type</string>
    <string name="CheckingYouUp">Checking you up!</string>
    <string name="year">Year</string>
    <string name="generate_historical_report">Generate Historical Report</string>
    <string name="get_water_report">Generate</string>
    <string name="create_purity_report">Create Purity Report</string>
    <string name="virus_ppm">Virus PPM</string>
    <string name="contaminant_ppm">Contaminant PPM</string>
    <string name="_100">100</string>
    <string name="purity_condition">Purity Condition</string>
    <string name="map">Map</string>
    <string name="view_purity_reports">View Purity Reports</string>
    <string name="create_quality_report">CREATE QUALITY REPORT</string>
    <string name="view_historical_report">View Historical Report</string>
    <string name="username_">Username: %1$s</string>
    <string name="user_type_">User Type: %1$s</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="cd_navdrawer_image">Navigation Drawer Image</string>
    <string name="cd_navdrawer_user_picture">User Profile Image</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="nav_sub_header">Sub header</string>
    <string name="nav_sub_item_1">Sub item 1</string>
    <string name="nav_sub_item_2">Sub item 2</string>
    <string name="water_sources">Water Sources</string>
    <string name="create_source_report">Create Source Report</string>
    <string name="view_source_list">View Source List</string>
    <string name="created_by">Created By:</string>
    <string name="condition">Condition: </string>
    <string name="location">Location: </string>
</resources>
