<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/reportNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/_100"
        android:textColor="@android:color/black"
        />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:layout_alignBaseline="@+id/longitudeTextView"
        android:layout_alignBottom="@+id/longitudeTextView"
        android:layout_toEndOf="@+id/longitudeTextView"
        android:layout_marginStart="11dp"/>

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginStart="6dp"/>

    <TextView
        android:id="@+id/waterTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_type"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"/>

    <TextView
        android:id="@+id/waterConditionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_condition"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginStart="18dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_by"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/usernameTextView"
        android:layout_marginEnd="7dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condition"
        android:textColor="@android:color/black"
        android:layout_below="@+id/longitudeTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_below="@+id/reportNumberTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Type:"
        android:textColor="@android:color/black"
        android:layout_marginEnd="10dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/waterTypeTextView"/>

</RelativeLayout>