<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:weightSum="1">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/latitudeInput"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latitude" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:id="@+id/longitudeInput">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/longitude" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/water_type" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/waterTypeSpinner"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/water_condition" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/waterConditionSpinner"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"/>

    <Button
        android:text="@string/accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/acceptButton"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton"
        android:layout_marginTop="5dp"
        style="@style/Widget.AppCompat.Button.Colored" />
</LinearLayout>